# made_advanced_cpp

./: main.c  test.txt
.github/workflows/: cicd_workflow.yml
hw1/: CMakeLists.txt  README.md  main.c
hw1/src/: CMakeLists.txt  solution.c  solution.h
hw1/tests/: CMakeLists.txt  solution_test.cpp
